Spacing fixes - header

--- a/css/main.css
+++ b/css/main.css
@@ -126,24 +126,31 @@ p {
 .mainNav div:not(:last-child) {
   margin-bottom: 5px; }
 
+header nav,
+div.eventDate,
+img.mainLogo,
+.iconIllo img {
+  margin: 0 auto 1.875rem; }
+
+header p.annual {
+  margin-bottom: 3.75rem; }
+
 header {
   width: 100%;
   height: 100vh;
   background-image: url(../img/christina-main-large.png);
   background-size: cover;
-  padding-top: 3.125rem; }
+  padding-top: 2.5rem; }
 
 header img {
   width: 80%;
   margin: auto;
-  padding-top: 100px;
+  /*  margin-top: 60px;*/
   mix-blend-mode: multiply;
   display: block;
   position: relative; }
 
 img.mainLogo {
-  margin-top: 30px;
-  margin-top: 2.5vh;
   max-width: 700px; }
 
 .iconIllo img {
@@ -160,9 +167,16 @@ img.mainLogo {
   right: 10px;
   text-align: center; }
 
+div.eventDate {
+  color: #FFFFFF;
+  background-color: #3E4149;
+  position: relative;
+  padding: 8px;
+  width: 70%;
+  max-width: 300px; }
+
 header nav {
   width: 90%;
-  margin: auto;
   /*  position: relative;
     top: 40px;
     right: 30px;*/
@@ -177,7 +191,8 @@ header nav ul li a {
   text-transform: uppercase;
   padding: 10px 5px; }
 
-header nav ul li:before {
+header nav ul li:before,
+footer nav ul li:before {
   content: " | "; }
 
 header nav ul li:first-child:before,
@@ -202,27 +217,18 @@ header p {
   letter-spacing: 7.5px;
   font-weight: 700; }
 
-div.eventDate {
-  color: #FFFFFF;
-  background-color: #3E4149;
-  position: relative;
-  top: 7.5%;
-  padding: 8px;
-  width: 70%;
-  max-width: 300px;
-  margin: 0 auto; }
-
 header div.iconIllo {
   width: 50%;
   margin: 0 auto 20px; }
 
 header a.scrollIcon {
   width: 20%;
-  position: relative;
-  bottom: 100px;
-  bottom: 10vh; }
+  padding: 20px;
+  /*  position: relative;*/
+  /*    bottom: 100px;
+    bottom: 10vh;*/ }
 
-.scrollIcon img {
+header a.scrollIcon img {
   width: 25px; }
 
 footer {
